# ppr

./: .gitignore  COMPLIANCE.yaml  README.md  codecov.yaml  package-lock.json
archive/services/document-delivery-service/: .dockerignore  Dockerfile  MANIFEST.in  README.md  setup.cfg  setup.py  test_run.py
archive/services/document-delivery-service/requirements/: dev.txt  non-pypi.txt  package.txt
jobs/permanent/ppr-registrations-historical/: .gcloudignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
jobs/permanent/ppr-registrations-historical/devops/: vaults.gcp.env
jobs/permanent/ppr-registrations-historical/requirements/: prod.txt
jobs/permanent/ppr-registrations-historical/schedules/: run.cron  run.prod.cron
mhr-api/: .env.sample  .gcloudignore  Dockerfile  README.md  gunicorn_config.py  manage.py  pyproject.toml  update_db.sh  wsgi.py
mhr-api/data-migration/: -2-mhr-staging-create-table.sql  0-mhr-staging-drop-table.sql  1-mhr-staging-trim.sql  2-mhr-staging-alter-table.sql  3-mhr-staging-code-type.sql  4-mhr-staging-timestsamp.sql  6-mhr-staging-address.sql  7-mhr-staging-draft.sql  8-mhr-final-pkey.sql
mhr-api/devops/: vaults.gcp.env
mhr-api/devops/gcp/: clouddeploy.yaml
mhr-api/migrations/: alembic.ini  env.py
mhr-api/migrations/versions/: 0001_rebase_2024-10.py  0002_party_code_account.py  0003_party_code_registration.py  0004_mhr_staff_review.py  0005_update_registering_name_in_view.py  0006_add_meta_into_mhr_registrations.py  0006_add_summary_snapshot_into_mhr_registrations.py  0007_add_drs_id_into_mhr_review_registrations.py  0007_add_drs_rejection_id_into_mhr_review_registrations.py
mhr-api/report-templates/: adminRegistrationV2.html  coverV2.html  exemptionV2.html  registrationCoverV2.html  registrationV2.html  rejectionV2.html  searchResultV2.html  transferV2.html  unitNoteV2.html
mhr-api/report-templates/static/v2/: footer_mail.html  footer_tod_rejection.html  header_mail.html  header_tod_rejection.html
mhr-api/report-templates/template-parts/: registrarSignature.html  registrarSignatureBlack.html  registrarSignatureBlack1.html  registrarSignatureBlack2.html  registrarSignatureBlack3.html  registrarSignatureBlack4.html  registrarSignatureBlackKT.html  registrarSignatureBlackSO.html  stylePageDraft.html
mhr-api/report-templates/template-parts/registration/: location.html  owners.html  sections.html
mhr-api/report-templates/template-parts/search-result/: location.html  owners.html
mhr-api/report-templates/template-parts/search-result-ppr/: amendmentStatement.html  courtOrderInformation.html  debtors.html  financingStatement.html  generalCollateral.html  securedParties.html  vehicleCollateral.html
mhr-api/report-templates/template-parts/v2/: style.html  styleMail.html  stylePage.html  stylePageCover.html  stylePageDraft.html  stylePageRegistration.html  stylePageRegistrationDraft.html
mhr-api/src/database/: README.md
mhr-api/src/database/patch/: 16418-mhr-manufacturers.sql  mhr-summary-snapshot.sh
mhr-api/src/database/postgres_functions/: __init__.py  get_mhr_number.py  individual_split_1.py  individual_split_2.py  individual_split_3.py  match_individual_name.py  mhr_name_compressed_key.py  searchkey_mhr.py  searchkey_vehicle.py
mhr-api/src/database/postgres_views/: __init__.py  account_draft_vw.py  account_registration_staff_vw.py  account_registration_vw.py  mhr_account_reg_vw.py  mhr_lien_check_vw.py  mhr_search_mhr_number_vw.py  mhr_search_owner_bus_vw.py  mhr_search_owner_ind_vw.py  mhr_search_serial_vw.py
mhr-api/src/mhr_api/: __init__.py  config.py  errorhandlers.py
mhr-api/src/mhr_api/exceptions/: __init__.py
mhr-api/src/mhr_api/models/: __init__.py  account_bcol_id.py  address.py  batch_utils.py  client_code.py  court_order.py  event_tracking.py  financing_statement.py  general_collateral.py  mhr_description.py  mhr_document.py  mhr_draft.py  mhr_extra_registration.py  mhr_location.py  mhr_manufacturer.py  mhr_note.py  mhr_owner_group.py  mhr_party.py  mhr_qualified_supplier.py  mhr_registration.py  mhr_registration_report.py  mhr_review_registration.py  mhr_review_step.py  mhr_section.py  mhr_service_agreement.py  party.py  queries.py  registration.py  registration_change_utils.py  registration_history_utils.py  registration_json_utils.py  registration_utils.py  search_request.py  search_result.py  search_utils.py  trust_indenture.py  type_tables.py  utils.py  vehicle_collateral.py
mhr-api/src/mhr_api/reports/: __init__.py  ppr_report_utils.py  report.py
mhr-api/src/mhr_api/resources/: cc_payment_utils.py  constants.py  endpoints.py  registration_utils.py  staff_review_utils.py  utils.py
mhr-api/src/mhr_api/services/: __init__.py  abstract_storage_service.py  authz.py  doc_service.py  ltsa.py  queue_service.py
mhr-api/src/mhr_api/utils/: __init__.py  admin_validator.py  logging.py  manufacturer_validator.py  note_validator.py  registration_validator.py  validator_owner_utils.py  validator_utils.py  validator_utils_legacy.py
mhr-api/test_data/: postgres_create_first.sql  postgres_create_last.sql  postgres_test_reset.sql
mhr-api/test_data/postgres_data_files/: test0001.sql  test0003.sql  test0004.sql  test0005.sql  test0006.sql  test0007.sql
mhr-api/test_data/postgres_data_files_ppr/: test0007.sql  test0008.sql  test0010.sql  test0015.sql  test_drafts.sql  test_user_update.sql  test_verification_report.sql
mhr-api/tests/: __init__.py  conftest.py
mhr-api/tests/postman/: mhr-api-migration-tests.postman_collection.json  mhr-api-unit.postman_collection.json
mhr-api/tests/unit/api/: test_admin_registrations.py  test_cc_utils.py  test_documents.py  test_drafts.py  test_exemptions.py  (+16 more)
services/document-delivery-service/: .dockerignore  .gcloudignore  .gitignore  Makefile  README.md  requirements.txt  setup.cfg  test_run.py
services/document-delivery-service/requirements/: non-pypi.txt
services/document-generation-service/: Dockerfile  Makefile  requirements.txt  setup.cfg  setup.py
services/document-generation-service/requirements/: dev.txt  non-pypi.txt
(+2497 files in other folders)
