[metadata]
name = document-delivery-service
version = attr: document_delivery_service.__version__
url = https://github.com/daxiom/document-delivery-service/
project_urls =
    Documentation = https://document-delivery-service.readthedocs.io/
    Changes = 
    Source Code = https://github.com/daxiom/document-delivery-service/
    Issue Tracker = https://github.com/daxiom/document-delivery-service/issues/
    Chat = 
license = Apache
author = thor wolpert
author_email = thor@daxiom.com
maintainer = thor wolpert
maintainer_email = thor@daxiom.com
description = super simple cloudevent that supports json
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    document_generation
    tests

[coverage:paths]
source =
    src
    */site-packages

[pycodestyles]
max_line_length = 120
good-names=
    ce,

[pylint]
ignore=migrations,test
disable=C0209,W0703

[flake8]
ignore =
    # bare except, handled by bugbear B001
    E722,F401
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/document_delivery_service/__init__.py: F401
