[project]
name = "ppr-registrations-historical"
version = "0.1.0"
description = "BC Registries PPR Account Registrations Historical Service"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "Apache-2.0" }
authors = [{ name = "team-le", email = "thor@wolpert.ca" }]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "ppr_registrations_historical", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
cachetools = "==5.3.0"
certifi = "==2022.12.7"
charset-normalizer = "==3.1.0"
grpcio-status = "==1.51.3"
grpcio = "==1.60.1"
idna = "==3.4"
proto-plus = "==1.22.2"
protobuf = "==4.22.1"
pyasn1-modules = "==0.2.8"
pyasn1 = "==0.4.8"
python-dotenv = "==1.0.0"
requests = "==2.28.2"
rsa = "==4.9"
six = "==1.16.0"
urllib3 = "==1.26.15"
google-auth = "*"
google-cloud-secret-manager = "*"
google-cloud-storage = "*"
google-crc32c = "*"
cloud-sql-connector = { git = "https://github.com/bcgov/sbc-connect-common.git", branch = "main", subdirectory = "python/cloud-sql-connector" }

[tool.poetry.group.test.dependencies]
freezegun = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
flake8-blind-except = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-pyproject = "*"
flake8-quotes = "*"
pep8-naming = "*"
pydocstyle = "*"
pylint = "*"
isort = "*"

[tool.flake8]
exclude = [".git", "*migrations*"]
max-line-length = 120
docstring-min-length = 10
per-file-ignores = ["*/__init__.py:F401", "*.py:B902"]

[tool.isort]
line_length = 120
indent = 4
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true

[tool.pylint.main]
ignore = ["migrations", "test"]
max-line-length = 120
notes = ["FIXME", "XXX", "TODO"]
disable = "C0301,W0511,W0613,R0801,R0902"

[tool.pytest.ini_options]
minversion = "2.0"
testpaths = ["tests"]
addopts = "--verbose --strict -p no:warnings --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml"
python_files = ["test*.py"]
norecursedirs = [".git", ".tox", "venv*", "requirements*", "build"]
log_cli = true
log_cli_level = 1
filterwarnings = ["ignore::UserWarning"]
markers = ["slow", "serial"]

[tool.coverage.run]
branch = true
source = ["src/ppr_registrations_historical"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"from",
	"import",
	"def __repr__",
	"if self.debug:",
	"if settings.DEBUG",
	"raise AssertionError",
	"raise NotImplementedError",
	"if 0:",
	"if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
